--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,16 @@ spring:
       ddl-auto: update
     show-sql: true
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: kmk930831@gmail.com
+    password: lyiplkblnupbwqbu
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
+
+
+
